more work committed

--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,7 +1,9 @@
-{{ define "footer" }}
-    <footer>Find out some more projects on my github 
-        <a href="https://github.com/whatafunc?tab=repositories">https://github.com/whatafunc?tab=repositories</a>
-    </footer>
+ 
+    {{define "footer"}}
+        <footer>Find out some more projects on my github 
+            <a href="https://github.com/whatafunc?tab=repositories">https://github.com/whatafunc?tab=repositories</a>
+            <p>© 2024 My Goland website like CMS or WiKi website</p>
+        </footer>
     </body>
     </html>
-{{ end }}
+    {{end}}
