--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,20 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>{{.Title}}</title>
-</head>
-<body>
-    <h1>{{.Title}}</h1>
-    {{ template "content" . }}
-    {{ template "footer" . }}
-</body>
-</html>
+{{ define "base.html" }}
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>{{ .Title }}</title>
+    </head>
+    <body>
+        <header>
+            <h1>{{ .Title }}</h1>
+        </header>
+    
+        <main>
+            {{ block "content" . }}
+            {{ end }}
+        </main>
+
+        {{ template "footer" . }}
+    
+{{ end }}
