--- a/templates/404.html
+++ b/templates/404.html
@@ -1,5 +1,5 @@
 {{ define "content" }}
-<h1>Warning: attempt to find file: {{.Title}}</h1>
+<h1>Error: attempt to find file: {{.Title}}</h1>
 
 <div> HTTP Erorr 404 </div>
 {{ end }}
