--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{{ .Title }}</title>
+        <link rel="stylesheet" href="/assets/css/styles.css?v={{ .Timestamp }}">
     </head>
     <body>
         <header>
